--- a/scss/modules/_commonStyle.scss
+++ b/scss/modules/_commonStyle.scss
@@ -34,5 +34,12 @@ li {
     list-style: none;
 }
 
+%border-oliv{
+    width: 100px;
+    height: 3px;
+    background-color: $c-oliv;
+    margin-bottom: 25px;
+}
+
 
 
