--- a/test.css
+++ b/test.css
@@ -1,23 +1,34 @@
-.img-set{
-    width: 300px;
-    height: 100px;
-    overflow: scroll;
+.div-wrapper{
     display: flex;
-    flex-flow: row;
+    flex-flow: row wrap;
+    column-gap: 20px;
 }
-.img-set img:nth-child(1) {
-    width: 150px;
-    height: 100px;
+.div1{
+    width: 45%;
+    height: 200px;
+    background-color: blue;
 }
-.img-set img:nth-child(2) {
-    width: 150px;
-    height: 100px;
+
+.div2{
+    width: 45%;
+    height: 200px;
+    background-color: rgb(222, 175, 113);
 }
-.img-set img:nth-child(3) {
-    width: 150px;
-    height: 100px;
+
+.div3{
+    width: 20%;
+    height: 200px;
+    background-color: rgb(200, 190, 86);
 }
-.img-set img:nth-child(4) {
-    width: 150px;
-    height: 100px;
+
+.div4{
+    width: 20%;
+    height: 200px;
+    background-color: rgb(223, 115, 227);
+}
+
+.div5{
+    width: 20%;
+    height: 200px;
+    background-color: rgb(0, 255, 51);
 }
