some change in scss file

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1126,6 +1126,7 @@ footer{
     background-size: cover;
     background-repeat: no-repeat;
 
+
     .footer-logo{
         width: 100%;
 
@@ -1182,4 +1183,4 @@ footer{
         }
 
     }
-}
+}}
