--- a/scss/style.scss
+++ b/scss/style.scss
@@ -129,6 +129,9 @@ li {
     text-align: center;
 
     @include media(768px) {
+        font-size: 50px;
+    }
+    @include media(992px) {
         font-size: 55px;
     }
 }
