--- a/scss/partials/_contact.scss
+++ b/scss/partials/_contact.scss
@@ -4,3 +4,94 @@
     background-image: url("../img/contact-img/contact-bg.png");
     @include background(center, cover, no-repeat);
 }
+
+// contact us
+.contact-us-wrap{
+    @include py(70px);
+
+    @include media(768px) {
+        @include py(80px);
+    }
+    @include media(768px) {
+        @include py(97px);
+    }
+    .container{
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        row-gap: 20px;
+
+        @include media(768px) {
+            flex-flow: row wrap;
+            align-items: start;
+            justify-content: center;
+            column-gap: 30px;
+        }
+        @include media(1200px) {
+            column-gap: 100px;
+        }
+        @include media(1400px) {
+            column-gap: 150px;
+        }
+        @include media(1800px) {
+            column-gap: 200px;
+        }
+    }
+
+    img{
+        width: 100px;
+        height: 100px;
+    }
+    h1{
+        @include fonts($font-pt, 30px, 700, 35px);
+
+        @include media(768px) {
+            font-size: 35px;
+            line-height: 40px;
+        }
+        @include media(992px) {
+            font-size: 40px;
+            line-height: 50px;
+        }
+    }
+    p{
+        display: flex;
+        flex-flow: column;
+        @include fonts($font-lato, 20px, 300, 30px);
+        margin-top: 28px;
+
+        @include media(992px) {
+            font-size: 24px;
+            line-height: 40px;
+        }
+    }
+}
+
+.contact{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+}
+.find-us{
+    max-width: 342px;
+    h1{
+        margin-top: 38px;
+    }
+}
+.contact-me{
+    width: 244px;
+
+    h1{
+        margin-top: 38px;
+
+    }
+}
+.email{
+    width: 243px;
+
+    h1{
+        margin-top: 45px;
+    }
+}
+
