--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -164,6 +164,7 @@
 
 .seth-kohen{
     background-position: left top;
+    background-color: rgba(236, 236, 236, 0.56);
 
     .container{
         display: flex;
