--- a/scss/partials/_practice.scss
+++ b/scss/partials/_practice.scss
@@ -9,3 +9,111 @@
         text-align: center;
     }
 }
+
+// personal injury
+
+.injury-head-sec{
+    
+    .container{
+        @include py(55px);
+        h1{
+            text-align: left;
+        }
+    }
+}
+
+.personal-injury{
+    padding-top: 55px;
+    padding-bottom: 106px;
+    background-color: rgba(236, 236, 236, 0.56);
+
+    .container{
+        display: flex;
+        flex-flow: column wrap;
+
+        @include media(1200px) {
+            flex-flow: row wrap;
+            justify-content: space-between;
+        }
+    }
+}
+
+.injury-content{
+    display: flex;
+    order: 2;
+    flex-flow: column wrap;
+
+    @include media(1200px) {
+        width: 48%;
+        order: 1
+    }
+    p{
+        @include fonts($font-lato, 35px, 500, 60px);
+        color: rgba(0, 0, 0, 0.75);
+        text-align: justify;
+    }
+    button{
+        display: inline-block;
+        @extend %btn-lato;
+        @include py(25px);
+        margin-top: 84px;
+
+        @include media(1200px) {
+            width: 384px;
+        }
+
+    }
+}
+
+.personal-injury-img{
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    order: 1;
+    margin-bottom: 50px;
+
+    @include media(1200px) {
+        width: 46%;
+        order: 2;
+        margin-top: -120px;
+    }
+    @include media(1800px) {
+        margin-top: -141px;
+    }
+    img{
+        width: 100%;
+
+        @include media(1200px) {
+            height: 550px;
+        }
+        @include media(1800px) {
+            height: 597px;
+        }
+    }
+}
+
+// slip section style
+
+.slip-sec{
+    .container{
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: end;
+        align-items: end;
+    }
+}
+
+.slip-and-fall-img{
+    @extend .personal-injury-img;
+
+    @include media(1200px) {
+        order: 1;
+    }
+}
+
+.slip-content{
+    @extend .injury-content;
+    @include media(1200px) {
+        order: 2;
+    }
+}
